[package]
name = "pg_ch_format"
version = "0.1.3"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
camino = "1.1.6"
clap = { version = "4.5.4", features = ["derive"] }
duct = "0.13.7"
glob = "0.3.1"
lazy_static = "1.4.0"
prettydiff = "0.6.4"
rayon = "1.10.0"
regex = "1.10.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

